src/components/HomePage/HomePage.css
.attribution-section-header {
    font-size: 2em;
    color: white;
    text-align: center;
}

.mission-header {
    color: white;
}

.attribution-header {
    font-size: 1.2em;
}

.waveform-and-description {
    display: flex;
    flex-direction: column;
    margin: 3vw;
}

.heatmap-and-description {
    display: flex;
    flex-direction: column;
    margin: 3vw;
}

.attribution-list {
    display: flex;
    flex-direction: column;
    list-style-type: none;
    margin: auto;
}

.attribution-text {
    color: white;
}

.waveform-img {
    align-self: center;
    width: 70%;
}

.heatmap-img {
    align-self: center;
    width: 70%;
}

.home-page-title {
    color: white;
    margin: 5vw 0 2vw 0;
}

.file-types-lists {
    color: white;
}

.file-types-header {
    color: white;
}

.attribution-header {
    color: white;
}

.file-type-header {
    color: white;
}

.what-is-mastering-text {
    color: white;
    margin: 2vw 0 2vw 0;
}

.mastering-explanation {
    color: white;
}

.how-it-works-header {
    color: white;
    font-size: 1.8em;
}

.how-it-works-text {
    color: white;
}

.mission-text {
    color: white;
}

@media screen and (min-width: 1200px) {

    .heatmap-and-description {
        display: flex;
        flex-direction: row;
    }

    .waveform-and-description {
        display: flex;
        flex-direction: row-reverse;
    }

    .heatmap-img {
        min-height: 200px;
        height: 10vw;
        width: auto;
        margin: 0 6vw 0 6vw;
    }

    .waveform-img {
        min-height: 200px;
        height: 10vw;
        width: auto;
        margin: 0 6vw 0 6vw;
    }


}

